--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "nccl"]
 	path = nccl
 	url = https://github.com/NVIDIA/nccl.git
+[submodule "axio-emulator"]
+	path = axio-emulator
+	url = https://github.com/axio-project/axio-emulator.git
