--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,17 +1,16 @@
 cmake_minimum_required(VERSION 3.8)
 project(fuselink_test LANGUAGES CUDA CXX)
 
-# Set CUDA specific flags
-# set(CMAKE_CUDA_STANDARD 14)
 set(CMAKE_CXX_STANDARD 14)
 find_package(Threads REQUIRED)
+find_package(CUDA REQUIRED)
 
+# Include directories for all tests
+include_directories(
+    ${CMAKE_SOURCE_DIR}/../src
+    ${CMAKE_SOURCE_DIR}/../src/device
+)
 
-# # Find CUDA
-# find_package(CUDA REQUIRED)
-# include_directories(${CUDA_INCLUDE_DIRS})
-
-# Add test executables
 add_executable(test_channel 
     test_channel.cu
     ../src/channel.cc
@@ -20,37 +19,28 @@ add_executable(test_channel
 add_executable(test_sendrecv
     test_sendrecv.cu
     ../src/channel.cc
-    ../device/device.cu
+    ../src/device/device.cu
 )
 
-# Link against CUDA libraries
-# target_link_libraries(test_channel ${CUDA_LIBRARIES})
+add_executable(test_channel_connection
+    test_channel_connection.cc
+    ../src/channel.cc
+    ../src/device/device.cu
+)
 
-# Set CUDA specific flags for test_channel
 set_target_properties(test_channel PROPERTIES
     CUDA_SEPARABLE_COMPILATION ON
-    CUDA_ARCHITECTURES "70"  # Adjust based on your GPU architecture
+    CUDA_ARCHITECTURES "70"
 )
-
-# Set CUDA specific flags for test_sendrecv
 set_target_properties(test_sendrecv PROPERTIES
     CUDA_SEPARABLE_COMPILATION ON
-    CUDA_ARCHITECTURES "70"  # Adjust based on your GPU architecture
+    CUDA_ARCHITECTURES "70"
+)
+set_target_properties(test_channel_connection PROPERTIES
+    CUDA_SEPARABLE_COMPILATION ON
+    CUDA_ARCHITECTURES "70"
 )
 
-# Include directories for test_channel
-target_include_directories(test_channel PRIVATE
-    ${CMAKE_SOURCE_DIR}/../src
-    ${CMAKE_SOURCE_DIR}/../src/device
-)
-
-# Include directories for test_sendrecv
-target_include_directories(test_sendrecv PRIVATE
-    ${CMAKE_SOURCE_DIR}/../src
-    ${CMAKE_SOURCE_DIR}/../src/device
-)
-
-# Link pthread for both executables
-target_link_libraries(test_channel ${CMAKE_THREAD_LIBS_INIT})
-target_link_libraries(test_sendrecv ${CMAKE_THREAD_LIBS_INIT})
-target_link_libraries(test_sendrecv cuda)
+target_link_libraries(test_channel ${CMAKE_THREAD_LIBS_INIT} cuda)
+target_link_libraries(test_sendrecv ${CMAKE_THREAD_LIBS_INIT} ibverbs rdmacm cuda)
+target_link_libraries(test_channel_connection ${CMAKE_THREAD_LIBS_INIT} ibverbs rdmacm cuda)
