pass IbSend/IbRecv test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,6 +28,16 @@ add_executable(test_channel_connection
     ../src/device/device.cu
 )
 
+add_executable(test_rdma_server_roce
+    rdma_server_roce.cc
+    ../src/net.cc
+)
+
+add_executable(test_rdma_client_roce
+    rdma_client_roce.cc
+    ../src/net.cc
+)
+
 set_target_properties(test_channel PROPERTIES
     CUDA_SEPARABLE_COMPILATION ON
     CUDA_ARCHITECTURES "70"
@@ -44,3 +54,5 @@ set_target_properties(test_channel_connection PROPERTIES
 target_link_libraries(test_channel ${CMAKE_THREAD_LIBS_INIT} cuda)
 target_link_libraries(test_sendrecv ${CMAKE_THREAD_LIBS_INIT} ibverbs rdmacm cuda)
 target_link_libraries(test_channel_connection ${CMAKE_THREAD_LIBS_INIT} ibverbs rdmacm cuda)
+target_link_libraries(test_rdma_server_roce ${CMAKE_THREAD_LIBS_INIT} ibverbs rdmacm)
+target_link_libraries(test_rdma_client_roce ${CMAKE_THREAD_LIBS_INIT} ibverbs rdmacm)
